--- a/index.html
+++ b/index.html
@@ -1,44 +1,116 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning and Laughing</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Learning & Laughing — Principal</title>
 
-    <!-- Fonte Poppins -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="app">
 
-    <header>
-        <img src="img/logo.png" alt="Logo Learning and Laughing" class="logo">
-    </header>
+    <!-- SIDEBAR -->
+    <aside class="sidebar" id="sidebar" aria-label="Navegação principal">
+      <div class="brand">
+        <img src="img/logo.png" alt="Logo" class="sidebar-logo">
 
-    <main class="container">
+        <div class="brand-text">
+          
+        </div>
+      </div>
 
-        <div class="left">
-            <h2 class="title">
-                Aprendendo <span class="pink">e</span> <br>
-                Rindo
-            </h2>
+      <nav class="nav" role="navigation" aria-label="Seções">
+        <button class="nav-item active" data-section="home"><span class="ico">🏠</span><span class="nav-text">Início</span></button>
+        <button class="nav-item" data-section="recents"><span class="ico">🕘</span><span class="nav-text">Recentes</span></button>
+        <button class="nav-item" data-section="new"><span class="ico">✨</span><span class="nav-text">Novo</span></button>
+        <button class="nav-item" data-section="popular"><span class="ico">🔥</span><span class="nav-text">Em alta</span></button>
+        <button class="nav-item" data-section="games"><span class="ico">🎮</span><span class="nav-text">Jogos</span></button>
+        <a class="nav-item" data-section="Aulas" href="aulas.html">
+    <span class="ico">📚</span>
+    <span class="nav-text">Aulas</span>
+</a>
 
-            <p class="desc">
-                Site desenvolvido para crianças especiais contendo jogos, aulas, interações em uma única
-                sala de aula, junte-se Learning e mude a forma de educar.
-            </p>
+      </nav>
 
-            <button class="btn-enter" onclick="entrar()">Entrar</button>
+      <div class="sidebar-footer">
+        <small>Disponível em todos os dispositivos</small>
+      </div>
+    </aside>
+
+    <!-- MAIN -->
+    <div class="main">
+
+      <!-- TOP BAR -->
+      <header class="topbar">
+        <div class="left-controls">
+          <button id="menuToggle" class="menu-btn" aria-label="Abrir menu">☰</button>
+          <div class="brand-mini">
+            
+          </div>
         </div>
 
-        <div class="right">
-            <img src="img/crianca-tablet.png" class="hero-img" alt="Criança no tablet">
+        <div class="search" role="search">
+          <label for="searchInput" class="sr-only">Pesquisar conteúdo</label>
+          <input id="searchInput" placeholder="Conteúdo" aria-label="Pesquisar conteúdo" />
+          <button id="searchBtn" aria-label="Pesquisar">🔍</button>
         </div>
 
-    </main>
+        <div class="top-actions">
+          <button id="themeToggle" class="icon-btn" aria-label="Alternar tema">🌓</button>
+          <button class="icon-btn" title="Notificações" aria-label="Notificações">🔔</button>
+          <a href="cadastro.html" class="pill" role="button">Cadastre-se</a>
+        </div>
+      </header>
 
-    <script src="script.js"></script>
+      <!-- PAGE CONTENT -->
+      <section class="content" aria-live="polite">
+
+        <!-- banner -->
+        <div class="banner" role="img" aria-label="Banner principal">
+          <!-- imagem local enviada pelo usuário -->
+          <img src="./img/banner.png" alt="Banner principal">
+        </div>
+
+        <div class="row-header">
+          <h3>Mais Jogados</h3>
+          <div class="row-actions" aria-hidden="true">
+            <span class="badge">50+ jogos</span>
+            <span class="badge">Sem instalação</span>
+          </div>
+        </div>
+
+        <div id="cards" class="cards-grid" role="list">
+          <!-- cards gerados por JS -->
+        </div>
+
+      </section>
+
+    </div>
+  </div>
+
+  <!-- Modal preview -->
+  <div id="modal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
+    <div class="modal-inner" role="document">
+      <button id="closeModal" class="modal-close" aria-label="Fechar">✕</button>
+      <img id="modalImg" src="" alt="" />
+      <h4 id="modalTitle"></h4>
+      <p id="modalDesc"></p>
+      <div class="modal-actions">
+        <button id="playNow" class="btn primary">Jogar</button>
+        <button id="viewMore" class="btn secondary">Mais informações</button>
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+
+
+  <!-- Botão de acessibilidade auditiva -->
+<div class="access-auditiva">
+    <img src="img/libras.oi.gif" alt="Acessibilidade Auditiva">
+</div>
+
 </body>
 </html>
